--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.2.4"
   }
 }
