--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25"
   }
 }
