--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,18 +11,37 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.0
+        with:
+          token: ${{ secrets.BOT_TOKEN}}
       - name: Install dependencies
         run: yarn install
       - name: Generate changelog
+        if: "!startsWith(github.event.head_commit.message, '[VERSION]')"
         id: semantic-release
         run: |
-          echo "CHANGELOG=$(yarn run git-conventional-commits changelog | tail -n +3 | head -n -1)" >> $GITHUB_OUTPUT
-          echo "VERSION=$(yarn run git-conventional-commits version | tail -2 | head -1)" >> $GITHUB_OUTPUT
-          yarn version ${{ steps.semantic-release.outputs.VERSION }}
+          CHANGELOG=$(yarn run git-conventional-commits changelog | tail -n +3 | head -n -1)
+          echo "CHANGELOG<<EOF" >> $GITHUB_OUTPUT
+          echo "$CHANGELOG" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+          VERSION=$(yarn run git-conventional-commits version | tail -2 | head -1)
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
           mkdir -p docs/
           touch docs/CHANGELOG.md
-          echo ${{ steps.semantic-release.outputs.CHANGELOG }} | cat - docs/CHANGELOG.md > temp.md && mv temp.md docs/CHANGELOG.md
+          echo "$CHANGELOG" | cat - docs/CHANGELOG.md > temp.md && mv temp.md docs/CHANGELOG.md
+          rm -rf .git/hooks/commit-msg
+          git config --unset core.hooksPath
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "actions@github.com"
+          git add -A
+          yarn version --new-version $VERSION --message "[VERSION] $VERSION"
+          git push
+          git fetch --unshallow
+          git checkout develop
+          git pull
+          git merge --no-ff master -m "[BUMP] $VERSION - bump `develop` after release"
+          git push
       - name: Create release
+        if: "!startsWith(github.event.head_commit.message, '[VERSION]')"
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
