--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,9 @@ jobs:
           git checkout develop
           git pull
           git merge --no-ff master -m "[BUMP] $VERSION - bump `develop` after release"
+          git checkout master -- docs/CHANGELOG.md
+          git add -A
+          git commit -m "[BUMP] $VERSION - bump `develop` after release"
           git push
       - name: Create release
         if: "!startsWith(github.event.head_commit.message, '[VERSION]')"
