--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "paths": {
+      "@public/*": [
+        "./public/*"
+      ],
+      "@public": [
+        "./public"
+      ],
+    },
   },
   "include": [
     "next-env.d.ts",
