feat: add download pdf button
refactor: carousel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,12 @@
       "@public": [
         "./public"
       ],
+      "@sections/*": [
+        "./src/sections/*"
+      ],
+      "@sections": [
+        "./src/sections"
+      ],
     },
   },
   "include": [
