--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,12 @@
       "@sections": [
         "./src/sections"
       ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@components": [
+        "./src/components"
+      ],
     },
   },
   "include": [
