--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
         "react-dom": "18.2.0",
         "react-icons": "^4.6.0",
         "react-slick": "^0.29.0",
+        "react-tsparticles": "^2.7.1",
         "tailwind": "^4.0.0",
         "tailwindcss": "^3.2.4",
+        "tsparticles": "^2.7.1",
         "typescript": "^4.9.3"
     },
     "devDependencies": {
