--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,12 @@
       "@components": [
         "./src/components"
       ],
+      "@definitions/*": [
+        "./src/definitions/*"
+      ],
+      "@definitions": [
+        "./src/definitions"
+      ],
     },
   },
   "include": [
