--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         "react-slick": "^0.29.0",
         "react-tsparticles": "^2.7.1",
         "tailwind": "^4.0.0",
-        "tailwindcss": "^3.2.4",
+        "tailwindcss": "^3.2.6",
         "tsparticles": "^2.7.1",
         "typescript": "^4.9.3"
     },
     "devDependencies": {
         "@types/node": "18.11.9",
-        "@types/react": "18.0.25"
+        "@types/react": "18.0.25",
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.21"
     }
 }
