--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@chakra-ui/react": "^2.4.1",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@react-google-maps/api": "^2.18.1",
         "@sendgrid/mail": "^7.7.0",
         "@typescript-eslint/parser": "^5.43.0",
         "daisyui": "^2.50.1",
