--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@chakra-ui/icons": "^2.0.12",
-        "@chakra-ui/react": "^2.4.1",
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
+        "@react-google-maps/api": "^2.18.1",
+        "@sendgrid/mail": "^7.7.0",
         "@typescript-eslint/parser": "^5.43.0",
+        "daisyui": "^2.50.1",
         "eslint": "8.27.0",
         "eslint-config-next": "13.0.3",
         "framer-motion": "^7.6.7",
@@ -22,15 +21,19 @@
         "husky": "^8.0.2",
         "next": "13.0.3",
         "react": "18.2.0",
+        "react-device-detect": "^2.2.2",
         "react-dom": "18.2.0",
         "react-icons": "^4.6.0",
         "react-slick": "^0.29.0",
-        "tailwind": "^4.0.0",
-        "tailwindcss": "^3.2.4",
+        "react-tsparticles": "^2.7.1",
+        "tailwindcss": "^3.2.6",
+        "tsparticles": "^2.7.1",
         "typescript": "^4.9.3"
     },
     "devDependencies": {
         "@types/node": "18.11.9",
-        "@types/react": "18.0.25"
+        "@types/react": "18.0.25",
+        "autoprefixer": "^10.4.13",
+        "postcss": "^8.4.21"
     }
 }
