--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,33 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "paths": {
+      "@public/*": [
+        "./public/*"
+      ],
+      "@public": [
+        "./public"
+      ],
+      "@sections/*": [
+        "./src/sections/*"
+      ],
+      "@sections": [
+        "./src/sections"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@components": [
+        "./src/components"
+      ],
+      "@definitions/*": [
+        "./src/definitions/*"
+      ],
+      "@definitions": [
+        "./src/definitions"
+      ],
+    },
   },
   "include": [
     "next-env.d.ts",
