--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-device-detect": "^2.2.2",
         "react-dom": "18.2.0",
         "react-icons": "^4.6.0",
+        "react-pdf": "^7.3.3",
         "react-slick": "^0.29.0",
         "react-tsparticles": "^2.7.1",
         "tailwindcss": "^3.2.6",
@@ -34,6 +35,7 @@
         "@types/node": "18.11.9",
         "@types/react": "18.0.25",
         "autoprefixer": "^10.4.13",
-        "postcss": "^8.4.21"
+        "postcss": "^8.4.21",
+        "raw-loader": "^4.0.2"
     }
 }
