--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "nextjs",
     "version": "0.8.1",
     "private": true,
+    "engines": {
+        "node": "22"
+    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
